--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardSubscribeCountPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardSubscribeCountPartial/Default.cshtml
@@ -30,14 +30,14 @@
             <div class="row">
                 <div class="col-6 border-right">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
-                        <p class="m-0">Friends</p>
+                        <h4 class="m-1">@ViewBag.linkedInFollowers</h4>
+                        <p class="m-0">Takipçiler</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
-                        <p class="m-0">Followers</p>
+                        <h4 class="m-1">@ViewBag.linkedInConnectionCount</h4>
+                        <p class="m-0">Bağlantı Sayısı</p>
                     </div>
                 </div>
             </div>
@@ -74,14 +74,14 @@
             <div class="row">
                 <div class="col-6 border-right">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
-                        <p class="m-0">Friends</p>
+                        <h4 class="m-1">@ViewBag.twitterFollowers</h4>
+                        <p class="m-0">Takipçiler</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
-                        <p class="m-0">Followers</p>
+                        <h4 class="m-1">@ViewBag.twitterFollowing</h4>
+                        <p class="m-0">Takip Ettiklerim</p>
                     </div>
                 </div>
             </div>
